data/derived/fa15/progs/unify/prog0231.ml.out
Characters 69-70:
  | (h,t) -> if t = false then t;;
                               ^
Error: This expression has type bool but an expression was expected of type
         unit
